--- a/src/main/resources/game.fxml
+++ b/src/main/resources/game.fxml
@@ -3,8 +3,9 @@
 <?import javafx.scene.layout.*?>
 
 <?import javafx.scene.canvas.Canvas?>
-<StackPane  styleClass="stackpane" stylesheets="styles.css" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.callumbirks.jfx.GameController"
-            >
+<?import javafx.scene.text.Text?>
+<StackPane styleClass="stackpane" stylesheets="styles.css" xmlns="http://javafx.com/javafx/11.0.1"
+           xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.callumbirks.jfx.GameController">
     <Canvas fx:id="canvas" width="800" height="500" onKeyPressed="#handleKeyPress"/>
+    <Text styleClass="score-text" text="${controller.scoreText}"/>
 </StackPane>
